fixed dashboard layout bug

--- a/web/client/stylesheets/pages/dashboard.scss
+++ b/web/client/stylesheets/pages/dashboard.scss
@@ -16,7 +16,7 @@
 // CUSTOM CSS
 .item-div {
 	vertical-align: bottom;
-	max-height:300px;
+	// max-height:300px;
 	position: relative;
 	img {
 		max-height:300px;
